--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     <header id="header" class="header">  
         <div class="container">
             <img class="pull-left" src="favicon.ico">
-            <h1 class="logo pull-left">
-
+            <h1 class="logo pull-left" style="padding-top: 50px">
                 <a class="scrollto" href="#promo">
                     <span class="logo-title">CatSystem</span>
                 </a>
